fix title spacing

--- a/static/css/sassy-output.css
+++ b/static/css/sassy-output.css
@@ -4,7 +4,8 @@
 
 */
 .landing-page-wrapper {
-  padding-top: 40px; }
+  padding-top: 40px;
+  padding-bottom: 0px; }
 
 .landing-title {
   font-size: 40px;
