--- a/static/css/sassy.scss
+++ b/static/css/sassy.scss
@@ -16,6 +16,7 @@
 
 .landing-page-wrapper {
   padding-top: 40px;
+  padding-bottom: 0px;
 }
 
 .landing-title {
